# raytracing-playground-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hit.cpp  hit.hpp  image_camera.hpp  main.cpp  render.cpp  render.hpp  vec3.hpp
src/: CMakeLists.txt  main.cpp
src/camera/: image_camera.hpp
src/extra/: CMakeLists.txt  rt_cannon.cpp  rt_cannon.hpp
src/render/: CMakeLists.txt  ppm.cpp  ppm.hpp  render.cpp  render.hpp
src/structs/: CMakeLists.txt  color.hpp  hit.hpp  hittable.hpp  hittable_list.hpp  ray.hpp  rt_body.cpp  rt_body.hpp  rt_canvas.hpp  rt_colors.hpp  rt_matrix.cpp  rt_matrix.hpp  rt_ray.hpp  rt_transformations.cpp  rt_transformations.hpp  rt_tuples.hpp  rt_util.cpp  rt_util.hpp  sphere.cpp  sphere.hpp
test/: CMakeLists.txt  canvas_tests.cpp  color_tests.cpp  intersections.cpp  matrix_tests.cpp  ray_sphere_tests.cpp  transformation_tests.cpp  tuple_tests.cpp
